implement bugfixes, performance and usability improvements
avoid unnecessary REST calls to the server